[package]
name = "diffutils"
version = "0.5.0"
edition = "2021"
description = "A CLI app for generating diff files"
license = "MIT OR Apache-2.0"
repository = "https://github.com/uutils/diffutils"

[lib]
name = "diffutilslib"
path = "src/lib.rs"

[[bin]]
name = "diffutils"
path = "src/main.rs"

[dependencies]
chrono = "0.4.38"
uucore = "0.6.0"
const_format = "0.2.35"
diff = "0.1.13"
itoa = "1.0.11"
regex = "1.10.4"
same-file = "1.0.6"
unicode-width = "0.2.0"
signals = "0.0.5"

[dev-dependencies]
assert_cmd = "2.0.14"
divan = { version = "4.3.0", package = "codspeed-divan-compat" }
pretty_assertions = "1.4.0"
predicates = "3.1.0"
rand = "0.10.0"
tempfile = "3.26.0"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"

# alias profile for 'dist'
[profile.dist]
inherits = "release"

[[bench]]
name = "bench_diffutils"
path = "benches/bench-diffutils.rs"
harness = false

[features]
# default = ["feat_bench_not_diff"]
# instead of limiting to KiB, MiB, etc, one can write kib, mib, Mb or whatever case.
feat_allow_case_insensitive_number_units = []
# Disable bench for diffutils cmp
feat_bench_not_cmp = []
# Disable bench for diffutils diff
feat_bench_not_diff = []
# Enables a check on options defined in NOT_YET_IMPLEMENTED.
# If on the parser will return an error message in these cases.
# This is preferable when running the util as unsupported options
# are pointed out to the user, but can make tests fail. 
feat_check_not_yet_implemented = []
