[package]
name = "uu_cmp"
description = "cmp ~ (uutils) decode/encode input (cmp file compare)"
repository = "https://github.com/uutils/diffutils/tree/main/src/uu/cmp"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true

# [lints]
# workspace = true

[[bin]]
name = "cmp"
path = "src/main.rs"

[lib]
path = "src/cmp.rs"

[features]
# TODO How to sync over all modules?
# instead of limiting to KiB, MiB, etc, one can write kib, mib, Mb or whatever case.
feat_allow_case_insensitive_number_units = []

[dependencies]
# const_format = { workspace = true }
diff_crate = { workspace = true }
itoa = { workspace = true }
regex = { workspace = true }
same-file = { workspace = true }
uucore = { workspace = true }
uudiff = { workspace = true }
unicode-width = { workspace = true }

[dev-dependencies]
divan = { workspace = true }
pretty_assertions = { workspace = true }
uudiff = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "cmp_bench"
harness = false
