[package]
name = "uu_cmp"
description = "cmp ~ (uutils) decode/encode input (cmp file compare)"
# The tool dist does not allow different repository names within the workspace.
repository = "https://github.com/uutils/diffutils"
# repository = "https://github.com/uutils/diffutils/tree/main/src/uu/cmp"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true

[lints]
workspace = true

[[bin]]
name = "cmp"
path = "src/main.rs"

[lib]
path = "src/cmp.rs"

[features]
# default = ["feat_run_binary_bench" ]
# The cmd benchmarks start the binaries and take a lot of runtime on the github checks.
# Only run them locally.
feat_run_binary_bench = []


[dependencies]
# bytecount.workspace = true
clap.workspace = true
diff_crate.workspace = true
fluent.workspace = true
itoa.workspace = true
regex.workspace = true
same-file.workspace = true
uucore = { workspace = true, features = [
  "parser-size",
] }
uudiff.workspace = true
unicode-width.workspace = true

[dev-dependencies]
divan.workspace = true
pretty_assertions.workspace = true
uudiff.workspace = true
tempfile.workspace = true

[profile.release]
# for flamegraph
# debug = true

